kubernetes/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
        - name: controller-container
          image: ghcr.io/dman7351/controller:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: github-registry-secret  # Auth for GHCR
