kubernetes/engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine-container
          image: ghcr.io/dman7351/mogwai-engine:latest  # image from registry
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 
      imagePullSecrets:
        - name: github-registry-secret # Auth for GHCR
