kubernetes/my-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
      - name: controller-container
        image: mogwai-controller:front2
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
