kubernetes/engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-service
spec:
  clusterIP: None
  selector:
    app: engine
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
